# AbsoluteSolver

./: .gitignore  Cargo.toml  OPTIMIZATION_QUICK_GUIDE.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.txt  README.md  config.yaml  igpu_list.txt  start.bat
hand/HandDetector/: HandDetector.onnx
hand/HandLandmarkDetector/: HandLandmarkDetector.onnx
head/FaceDetector/: FaceDetector.onnx
head/FaceLandmarkDetector/: FaceLandmarkDetector.onnx  model.data
src/: algorithm.rs  algorithms.rs  config.rs  detectors.rs  hand.rs  head.rs  interaction.rs  main.rs  overlay.rs  preprocess.rs  shortcuts.rs
